A few miscellaneous fixes:
1. Java 8 compatibility for now - see changes in JdbcUrlUtils
2. Change POM version to 1.00.RC2-SNAPSHOT